# Pre-trained_Models_and_Weights

./: .gitattributes  semantic_segmentation_voc2012net.dnn  semantic_segmentation_voc2012net_v2.dnn
dlib_face_recognition_resnet_model_v1_lfw_test/: CMakeLists.txt  README.txt  get_lfw_pairs.h  main.cpp
dlib_face_recognition_resnet_model_v1_lfw_test/labeled_faces_in_the_wild/: lfw.cpp
dlib_kitti_submission_mmodCNN_basic7convModel/: CMakeLists.txt  README.txt  convert_to_xml.cpp  kitti_train_box_regression.cpp  kitti_train_detector.cpp
dlib_kitti_submission_mmodCNN_basic7convModel/dlib/: .hg_archival.txt
dlib_kitti_submission_mmodCNN_basic7convModel/kitti_dets/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+7477 more)
